--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <head>
     <title>We are Playing with docker</title>
 </head>
-<body style="background-color: aqua;">
+<body>
     <h2> A SIMPLE PLAYGROUND APP</h2>
 
     {% if word %}
