added a new line

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 </head>
 <body style="background-color: aqua;">
     <h2> A SIMPLE PLAYGROUND APP</h2>
+    <h2> A random quote will always be Generated</h2>
 
     {% if word %}
         <h1> {{ word }} </h1>
