--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <head>
     <title>We are Playing with docker</title>
 </head>
-<body style="background-color: aqua;">
+<body style="background-color: powderblue;">
     <h2> A SIMPLE PLAYGROUND APP</h2>
-    <h2> A random quote will always be Generated</h2>
+
+    <br><h2> A random quote will always be Generated</h2><br>
 
     {% if word %}
         <h1> {{ word }} </h1>
